--- a/modude1/Bai5_html_form_table/Bai_tap/Tao_form_don_gian/TaoFormĐonGian.css
+++ b/modude1/Bai5_html_form_table/Bai_tap/Tao_form_don_gian/TaoFormĐonGian.css
@@ -1,5 +1,9 @@
+body {
+    background-color: aqua;
+}
 div {
     width: 600px;
+    background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -10,6 +14,22 @@ h1 {
     padding-top: 3px;
     font-weight: 500;
 }
+form{
+    margin-left: 50px;
+}
 td {
     padding: 5px;
 }
+.imf {
+    padding: 5px;
+    text-align: right;
+    color: blue;
+}
+.hobby {
+    color: orangered;
+    padding: 0 10px;
+}
+.sub {
+    text-align: center;
+}
+
