--- a/modude1/Bai5_html_form_table/Bai_tap/Tao_ban_co_vua/TaoBanCoVua.css
+++ b/modude1/Bai5_html_form_table/Bai_tap/Tao_ban_co_vua/TaoBanCoVua.css
@@ -1,3 +1,9 @@
 td {
     padding: 30px;
 }
+.row1 td:nth-child(even) {
+    background-color: black;
+}
+.row2 td:nth-child(odd) {
+    background-color: black;
+}
