--- a/modude1/Bai5_html_form_table/Bai_tap/Tao_ban_co_vua/TaoBanCoVua.css
+++ b/modude1/Bai5_html_form_table/Bai_tap/Tao_ban_co_vua/TaoBanCoVua.css
@@ -1,5 +1,12 @@
+table, th, td {
+    border-spacing: 0px;
+}
 td {
     padding: 30px;
+}
+th {
+    padding: 30px;
+    background-color: #FFB300;
 }
 .row1 td:nth-child(even) {
     background-color: black;
